refactor tests; improve formatting and readability in PlayerServicesControllerTest and PlayerDataServiceTest, and enhance logging in MatchServiceWebClient